# minecraftd

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
apis/modrinth-api/: README.md
apis/mojang-piston-api/: Cargo.toml
apis/mojang-piston-api/src/: http_client.rs
apis/mojang-piston-api/src/java_runtime/: mod.rs
apis/mojang-piston-api/src/minecraft/: manifest.rs  mod.rs
bridge/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
bridge-protocol/: Cargo.toml  build.rs
bridge-protocol/src/: lib.rs  protocol.proto
bridge/buildSrc/: build.gradle.kts
bridge/bukkit/: build.gradle.kts
bridge/common/: build.gradle.kts
bridge/fabric/: build.gradle.kts
bridge/forge/: build.gradle.kts
mcctl/: Cargo.toml
mcctl-protocol/: Cargo.toml
mcctl-protocol/src/: client.rs  error.rs  lib.rs  protocol.proto  server.rs
mcctl/src/: cli.rs  eula.rs  main.rs
mcctl/src/subcommands/: attach.rs  create.rs  kill.rs  mod.rs  ps.rs  restart.rs  start.rs  stats.rs  stop.rs  update.rs
mcctl/src/subcommands/extensions/: add.rs  mod.rs
minecraft-protocol/: Cargo.toml
minecraft-protocol/src/: lib.rs  raw_packet.rs  raw_packet_stream.rs  stream_ext.rs  stream_ext_async.rs  text_component.rs  varint.rs
minecraft-protocol/src/packet/: mod.rs  status_response.rs
minecraft-rcon/: Cargo.toml
minecraft-rcon/src/: lib.rs
minecraftd/: Cargo.toml
minecraftd-manifest/: Cargo.toml
minecraftd-manifest/src/: lib.rs
minecraftd/src/: alert.rs  auto_start.rs  auto_update.rs  bridge.rs  cli.rs  config.rs  java_runtime.rs  lock.rs  main.rs  metrics.rs  port.rs  port_pool.rs  proxy_server.rs  server.rs  socket.rs
minecraftd/src/extension/: cache.rs  mod.rs
minecraftd/src/extension/providers/: mod.rs  modrinth.rs
minecraftd/src/runner/: metrics.rs  mod.rs  running_servers.rs  terminal.rs
minecraftd/src/server/: auto_update.rs  config.rs  java_runtime.rs  mod.rs  proxy_server.rs  runner.rs
minecraftd/src/server/extension_providers/: mod.rs  modrinth.rs
minecraftd/src/server/implementations/: custom.rs  mod.rs  vanilla.rs
minecraftd/src/server/implementations/paper/: api.rs  mod.rs
minecraftd/src/server/runner/: auto_start.rs  bridge.rs  metrics.rs  mod.rs  running_servers.rs  terminal.rs
minecraftd/src/server_implementations/: custom.rs  vanilla.rs
minecraftd/src/server_implementations/paper/: api.rs  mod.rs
minecraftd/src/util/: cached_mojang_piston_api.rs  lazy_init_http_client.rs  mod.rs  observable_value.rs  os_str_ext.rs  server_list_ping.rs  server_properties.rs
modrinth-api/: Cargo.toml
(+160 files in other folders)
