[package]
name = "minecraftd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-recursion = "1.1.1"
bytes = "1.11.1"
cached = { version = "0.56.0", features = ["async"] }
clap = { version = "4.5.57", features = ["derive"] }
dirs = "6.0.0"
fs2 = "0.4.3"
hex = "0.4.3"
log = "0.4.29"
mcctl-protocol = { version = "0.1.0", path = "../mcctl-protocol" }
minecraft-protocol = { version = "0.1.0", path = "../minecraft-protocol" }
minecraft-rcon = { version = "0.1.0", path = "../minecraft-rcon" }
minecraftd-manifest = { version = "0.1.0", path = "../minecraftd-manifest" }
modrinth-api = { version = "2.7.0", path = "../apis/modrinth-api" }
mojang-piston-api = { version = "0.1.0", path = "../apis/mojang-piston-api" }
nix = { version = "0.31.1", features = ["signal"] }
pretty_env_logger = "0.5.0"
prost = "0.14.3"
pty-process = { version = "0.5.3", features = ["async"] }
rand = "0.10.0"
reqwest = "0.13.2"
rust-lzma = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
sha1 = "0.10.6"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "net", "rt", "signal", "sync"] }
uuid = { version = "1.20.0", features = ["v4"] }
